# ida-pro-proxy-mcp

./: .gitignore  README.md  pyproject.toml  test_client.py
samples/: README.md  test1  test2  test3
samples/src/: Makefile  test1.c  test2.c  test3.c
src/ida_pro_proxy_mcp/: __init__.py  models.py  process_manager.py  router.py  server.py  session_manager.py
tests/: __init__.py  conftest.py  stress_test.py  test_e2e_integration.py  test_models.py  test_process_manager.py  test_router.py  test_session_manager.py
