[project]
name = "ida-pro-proxy-mcp"
version = "0.1.1"
description = "IDA Pro Proxy MCP - Multi-binary analysis proxy for ida-pro-mcp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "zraxx", email = "fake@zraxx.com" }
]
keywords = ["ida", "mcp", "reverse-engineering", "binary-analysis", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
ida-proxy-mcp = "ida_pro_proxy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ida_pro_proxy_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
